# CustomerServiceOrchestration

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
cs-orchestration-context/: AGENTS.md  README.md  UPDATE-MANIFEST.md
cs-orchestration-context/docs/: api-contracts.md  architecture.md  backlog.md  current-scope.md  data-model.md  decisions.md  helpdesk-abstraction.md  project-context.md  security.md  workflows.md
cs-orchestration-context/examples/: README.md  helpdesk-ticket-webhook.json  helpdesk-update-payload.json  oms-get-order-details-response-expanded-sanitized.json  oms-get-order-details-response-not-expanded-sanitized.json  oms-search-orders-response-expanded-sanitized.json  oms-search-orders-response.json
src/cs_orchestration/: __init__.py  main.py  ui.py
src/cs_orchestration/api/routes/: enrichment.py
src/cs_orchestration/config/: settings.py
src/cs_orchestration/domain/: models.py  summaries.py
src/cs_orchestration/integrations/helpdesk/: __init__.py  base.py  freshdesk_adapter.py  freshdesk_mapper.py  freshdesk_note_renderer.py  mock_adapter.py
src/cs_orchestration/integrations/oms/: __init__.py  base.py  factory.py  mapper.py  mock_client.py  real_client.py
src/cs_orchestration/presentation/: __init__.py  formatting.py
src/cs_orchestration/workflows/: enrich_ticket.py
tests/: test_api.py  test_enrich_ticket_workflow.py  test_freshdesk_adapter.py  test_oms_mapper.py  test_order_business_client.py  test_presentation_formatting.py  test_settings.py
