[project]
name = "customer-service-orchestration"
version = "0.1.0"
description = "Customer Service orchestration API for helpdesk ticket enrichment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cs_orchestration"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
